--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,21 @@
-/*fonts*/
+	/*fonts*/
 
 @font-face {
-  font-family: Futura;
-  src: url(futura.ttf);
+  font-family: Lato;
+  src: url(Lato-Regular.ttf);
   font-weight: normal;
 }
 
 @font-face {
-  font-family: Futura;
-  src: url(futuraitalic.ttf);
+  font-family: Lato;
+  src: url(Lato-Italic.ttf);
   font-style: italic;
 }
 
 /*shared css across all pages*/
 
 body {
-    font-family: Futura;
+    font-family: Lato;
     font-weight: normal;
     background-color: #262626;
     font-size: 20px;
@@ -23,8 +23,8 @@ body {
     }
 
 h1, h2, h3, h4{
-    font-family: Futura;
-    font-style: italic;
+    font-family: Lato;
+    /*font-style: italic;*/
     font-weight: bold;
   }
 
@@ -49,7 +49,7 @@ header {
     } /*photo logo of home*/
 
  .side a {
-    font-family: Futura;
+    font-family: Lato;
 
      color: black;
         text-decoration: none;
