--- a/public/css/style.css
+++ b/public/css/style.css
@@ -424,7 +424,29 @@ a {
   color: #FFFFFF;
 }
 
+/*price update page*/
+#price_update_button {
+	display:block;
+    width: 100px;
+    height: 35px;
+    background-color: #EEE2DF;
+	cursor: pointer;
+	border-radius:1em;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: .7em;
+	letter-spacing: 1.5px;
+	text-transform: uppercase;
+    }
 
+#price_update_button:hover {
+  background-color: #FFFFFF;
+}
+
+#centeritem {
+	margin-left: auto;
+	margin-right: auto;
+}
 /*footer styling*/
 
 footer {
